force-app/main/default/objects/Eligibility_History__c/Eligibility_History__c.object-meta.xml
<CustomObject>
    <label>Eligibility History</label>
    <nameField>
        <displayFormat>EH-{00000}</displayFormat>
        <label>Eligibility History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>