force-app/main/default/objects/Eligibility_History__c/fields/Checked_On__c.field-meta.xml
<CustomField>
    <fullName>Checked_On__c</fullName>
    <label>Checked On</label>
    <type>DateTime</type>
</CustomField>