force-app/main/default/objects/Eligibility_History__c/fields/Current_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Eligibility_Status__c</fullName>
    <label>Current Eligibility Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>