force-app/main/default/objects/Eligibility_History__c/fields/Eligibility_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eligibility_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>