force-app/main/default/objects/Eligibility_History__c/fields/Last_Eligible_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Eligible_Status__c</fullName>
    <label>Last Eligible Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>