force-app/main/default/objects/Eligibility_History__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Pathway Only</fullName>
            </value>
            <value>
                <fullName>CPA only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>